updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am really excited to be able to take this course and i am looking forward to be great at coding</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Mexico but living in Houston</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Watch movies, outdoor activities, reading and to try new things  </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To be able to work from the beach</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>In Houston Texas</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To gain skills in this field so i can open my own company</p>
     </section>
 
     <footer id="footer">
