updating our details again

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>Introduction</h1>
       <p>I am really excited to be able to take this course and i am looking forward to be great at coding</p>
       <h1>Where I'm From</h1>
-      <p>I am from Mexico but living in Houston</p>
+      <p>I am from Mexico City</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Watch movies, outdoor activities, reading and to try new things  </p>
       <h1>What's your dream job?</h1>
